# amumu

./: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: .amumu.c.swn  .amumu.c.swo  .amumu.c.swp  Makefile  Makefile.am  Makefile.in  amumu  amumu.c
src/.deps/: amumu.Po
src/kernel/: Makefile  Makefile.am  Makefile.in  boot.c  boot.h  bst.c  bst.h  main.c  s  socket.c  socket.h  uart.c  uart.h
src/kernel/.deps/: boot.Po  bootloader.Po  bst.Po  socket.Po  uart.Po
